# kopico

./: .gitignore  CLAUDE.md  PROJECT-STATUS.md  README.md  ROADMAP.md  build.gradle.kts  detekt.yml  settings.gradle.kts
.github/workflows/: build.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
examples/blink/: README.md  build.gradle.kts  settings.gradle.kts
examples/blink/src/nativeMain/kotlin/: Main.kt
gradle/wrapper/: gradle-wrapper.properties
poc/: RESULTS.md  SETUP.md  konan-target-spike.md
poc/blink/: CMakeLists.txt  wrapper.c
poc/blink/lld-wrap/: ld.lld
poc/interop/: pico_stdlib.def
specs/001-poc-minimal-plugin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-poc-minimal-plugin/checklists/: requirements.md
specs/001-poc-minimal-plugin/contracts/: extension-dsl.md
src/main/kotlin/: Main.kt
src/main/kotlin/com/anjo/kopico/: BoardVariant.kt  KonanRetargeting.kt  KopicoExtension.kt  KopicoPlugin.kt
src/main/kotlin/com/anjo/kopico/provisioning/: ArmToolchainProvisioner.kt  KotlinNativeProvisioner.kt  OpenOcdProvisioner.kt  PicoSdkProvisioner.kt  PicotoolProvisioner.kt  ToolCache.kt
src/main/kotlin/com/anjo/kopico/tasks/: CinteropTask.kt  CompileNativeTask.kt  (+3 more)
src/main/resources/kopico/: CMakeLists.txt  kopico.h  kopico_shim.c  kopico_stdio_globals.c  memmap_kopico.ld
src/test/kotlin/com/anjo/kopico/: BoardVariantTest.kt  KopicoExtensionTest.kt  KopicoPluginFunctionalTest.kt
(+2 files in other folders)
